# MSL

./: .bazelrc  .gitmodules  CMakeLists.txt  README.md  WORKSPACE
src/: CMakeLists.txt  tagged_tuple.hh  utility.hh  variant.hh
src/algorithm/: AdjacentPairRemoval.hh  AdjacentPairRemoval.inl  BUILD  CMakeLists.txt  CTestTestfile.cmake  Heap.hh  Heap.inl  Makefile  NthElement.hh  NthElement.inl  Partition.hh  Partition.inl  cmake_install.cmake
src/algorithm/benchmarks/: BUILD  PartitionBenchmark.cc
src/algorithm/tests/: AdjacentPairRemovalTest.cc  BUILD  CMakeLists.txt  CTestTestfile.cmake  HeapTest.cc  Makefile  PartitionTest.cc  cmake_install.cmake
src/containers/: BUILD  CMakeLists.txt  TaggedTuple.hh  Variant.hh
src/containers/tests/: BUILD  CMakeLists.txt  TaggedTupleTest.cc  VariantTest.cc
src/tests/: CMakeLists.txt  TaggedTupleTest.cc
src/utility/: Algorithm.hh  BUILD  CMakeLists.txt  JumpTable.hh  JumpTable.inl  Literals.hh  TypeTraits.hh
src/utility/tests/: BUILD  CMakeLists.txt  JumpTableTest.cc
